Bug 473861 - 'Workers: Using functions (rather than attributes) for message/error handlers doesn't work'. r+sr=mrbkap, a=sicking